# Actinium-ng

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  autogen.sh  confdefs.h  configure.ac  deltags.rb  libbitcoinconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
build_msvc/: README.md  bitcoin.sln  bitcoin_config.h  bitcoin_config.h.in
contrib/: README.md  bitcoin-cli.bash-completion  bitcoin-tx.bash-completion  bitcoind.bash-completion  gitian-build.py  valgrind.supp
depends/: README.md  description.md  funcs.mk
doc/: Doxyfile.in  JSON-RPC-interface.md  Lightning-on-Vultr.md  README.md  README_windows.txt  benchmarking.md  bips.md  bitcoin-conf.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  psbt.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.md  zmq.md
doc/man/: Actinium-cli.1  Actinium-qt.1  Actinium-tx.1  Actinium-wallet.1  Actiniumd.1  Makefile.am  bitcoin-qt.1  bitcoin-util.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  amount.h  arith_uint256.h  bitcoin-cli  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-util  bitcoin-util-res.rc  bitcoin-util.cpp  (+29 more)
(+356 files in other folders)
